[webcanvas][back] game 도메인 DDD 기반 Layered Architecture 전환 작업 중간 커밋 - registry 패키지 분리 필요